--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav>
     </nav>
     <div id="grid">
-        <a href="#">
+        <a href="learn-javascript.html">
             <div class="codeSection">
                 <div class="sectionName">
                     <span class="main">JavaScript</span>
