--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <h1 id="title">Stephanie Tanner</h1>
     <nav>
     </nav>
+    <a href="brain-me/index.html"><section id="brainMeLink">
+    <h2>Topic Integration: Brain Me App</h2>
+    <img src="images/brain-me-logo-300.png" alt="logo for Brain Me">
+    </section></a>
     <div id="grid">
         <a href="learn-javascript.html">
             <div class="codeSection">
