--- a/brain-me/preSurgery.html
+++ b/brain-me/preSurgery.html
@@ -22,7 +22,7 @@
     <main>
         <h2>Surgery Risk Assessment</h2>
         <div class="content">
-            <form>
+            <form id="riskAssessmentForm">
                 <fieldset>
                     <h2>Surgeon Factors</h2>
                     <div class="slideContainer">
@@ -70,7 +70,7 @@
                     </div>
                 </fieldset>
 
-                <button type="submit" id="submitButton">Add Surgery</button>
+                <button type="submit" id="riskButton">Compute Risk</button>
 
             </form>
         </div>
