--- a/index.html
+++ b/index.html
@@ -15,16 +15,19 @@
     <h1 id="title">Stephanie Tanner</h1>
     <nav>
     </nav>
-    <a href="brain-me/index.html"><section id="brainMeLink">
-    <h2>Topic Integration: Brain Me App</h2>
-    <img src="images/brain-me-logo-300.png" alt="logo for Brain Me">
-    </section></a>
+    <a href="brain-me/index.html">
+        <section id="brainMeLink">
+            <h2>Topic Integration:<br>Brain Me App</h2>
+            <img src="images/brain-me-logo-300.png" alt="logo for Brain Me">
+        </section>
+    </a>
     <div id="grid">
         <a href="learn-javascript.html">
             <div class="codeSection">
                 <div class="sectionName">
                     <span class="main">JavaScript</span>
-                    <span class="comment">Loops, Conditional Statements, Functions, Variables, Parameters, Arrays, Associative Arrays</span>
+                    <span class="comment">Loops, Conditional Statements, Functions, Variables, Parameters, Arrays,
+                        Associative Arrays</span>
                 </div>
             </div>
         </a>
@@ -32,7 +35,8 @@
             <div class="codeSection">
                 <div class="sectionName">
                     <span class="main">JavaScript Objects</span>
-                    <span class="comment">Object Creation Functions, Inheritance, Properties, Methods, Instantiation</span>
+                    <span class="comment">Object Creation Functions, Inheritance, Properties, Methods,
+                        Instantiation</span>
                 </div>
             </div>
         </a>
@@ -56,7 +60,8 @@
             <div class="codeSection">
                 <div class="sectionName">
                     <span class="main">Local Storage</span>
-                    <span class="comment">Local Storage API, Storing and Retreiving Simple Data, Arrays, Associative Arrays and Objects</span>
+                    <span class="comment">Local Storage API, Storing and Retreiving Simple Data, Arrays, Associative
+                        Arrays and Objects</span>
                 </div>
             </div>
         </a>
@@ -64,7 +69,8 @@
             <div class="codeSection">
                 <div class="sectionName">
                     <span class="main">Document Object Model</span>
-                    <span class="comment">DOM Manipulation Using createElement, appendChild, insertBefore, removeChild, etc.</span>
+                    <span class="comment">DOM Manipulation Using createElement, appendChild, insertBefore, removeChild,
+                        etc.</span>
                 </div>
             </div>
         </a>
@@ -80,7 +86,8 @@
             <div class="codeSection">
                 <div class="sectionName">
                     <span class="main">CSS3 Transitions, Animations, Transformations</span>
-                    <span class="comment">Creating CSS3 Transitions and Animations in CSS and Triggering them with JavaScript</span>
+                    <span class="comment">Creating CSS3 Transitions and Animations in CSS and Triggering them with
+                        JavaScript</span>
                 </div>
             </div>
         </a>
@@ -88,7 +95,8 @@
             <div class="codeSection">
                 <div class="sectionName">
                     <span class="main">Javascript Events</span>
-                    <span class="comment">JavaScript Events Including those for Mobile Devices (e.g. onTouchBegin, onLoad, etc.), Animation and Transition Events</span>
+                    <span class="comment">JavaScript Events Including those for Mobile Devices (e.g. onTouchBegin,
+                        onLoad, etc.), Animation and Transition Events</span>
                 </div>
             </div>
         </a>
@@ -104,7 +112,8 @@
             <div class="codeSection">
                 <div class="sectionName">
                     <span class="main">CSS3 Transitions</span>
-                    <span class="comment">Designing, Defining, and Triggering CSS3 Transitions without Custom Libraries (Thought Library) </span>
+                    <span class="comment">Designing, Defining, and Triggering CSS3 Transitions without Custom Libraries
+                        (Thought Library) </span>
                 </div>
             </div>
         </a>
@@ -112,7 +121,8 @@
             <div class="codeSection">
                 <div class="sectionName">
                     <span class="main">CSS3 Transforms</span>
-                    <span class="comment">Designing, Defining, and Triggering CSS3 Transforms without Custom Libraries</span>
+                    <span class="comment">Designing, Defining, and Triggering CSS3 Transforms without Custom
+                        Libraries</span>
                 </div>
             </div>
         </a>
@@ -120,7 +130,8 @@
             <div class="codeSection">
                 <div class="sectionName">
                     <span class="main">CSS Animations</span>
-                    <span class="comment">Designing, Defining and Triggering CSS3 Animations without Custom Libraries</span>
+                    <span class="comment">Designing, Defining and Triggering CSS3 Animations without Custom
+                        Libraries</span>
                 </div>
             </div>
         </a>
