--- a/brain-me/index.html
+++ b/brain-me/index.html
@@ -18,29 +18,48 @@
             <img src="images/brain-me-logo-300.png" id="logo" alt="logo">
             <h1>BRAIN ME</h1>
         </div>
-        <!--<div class="menuIcon">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>-->
-    </nav>
-        <h2>Hello!</h2>
-        <section>
-            <a href="surgery-schedule.html">Your Surgery Schedule</a>
+        <div id="indexPage">
+            <section>
+                <a href="surgery-schedule.html">
+                    <img src="images/icons/schedule.png" alt="clock icon">
+                    <h2>Your Surgery Schedule</h2>
+                </a>
+            </section>
+            <section>
+                <a href="preSurgery.html">
+                    <img src="images/icons/folder.png" alt="folder icon">
+                    <h2>Pre-Surgery Risk Assessment</h2>
+                </a>
+            </section>
+            <section>
+                <a href="postSurgery.html">
+                    <img src="images/icons/analyze.png" alt="analysis icon">
+                    <h2>Post-Surgery Analysis</h2>
+                </a>
+            </section>
+            
+        </div>
 
-        </section>
-        <section>
-            <a href="preSurgery.html">Pre-Surgery Risk Assessment</a>
-
-        </section>
-        <section>
-            <a href="#">Post-Surgery Risk Assessment</a>
-
-        </section>
-
-    <footer>
-
-    </footer>
+        <footer>
+            <div class="navbar">
+                <a href="index.html" class="active">
+                    <img src="images/brain-me-logo-300.png">
+                    <p>Home</p>
+                </a>
+                <a href="surgery-schedule.html">
+                    <img src="images/icons/schedule.png">
+                    <p>Schedule</p>
+                </a>
+                <a href="preSurgery.html">
+                    <img src="images/icons/folder.png">
+                    <p>Risk</p>
+                </a>
+                <a href="postSurgery.html">
+                    <img src="images/icons/analyze.png">
+                    <p>Analysis</p>
+                </a>
+            </div>
+        </footer>
 </body>
 
 </html>
