--- a/brain-me/postSurgery.html
+++ b/brain-me/postSurgery.html
@@ -26,26 +26,22 @@
                 <fieldset>
                     <h2>Surgeon Factors</h2>
                     <div class="slideContainer">
-                        <label>Curency
-                            <span class="help-tip">
-                                <img src="images/icons/question.png">
-                            </span>
-                        </label>
+                        <label>Curency</label>
                         <input type="range" min="0" max="5" value="0" class="slider">
                         <div class="output"></div>
                     </div>
                     <div class="slideContainer">
-                        <label>Experience Level<span><img src="images/icons/question.png"></span></label>
+                        <label>Experience Level</label>
                         <input type="range" min="0" max="5" value="0" class="slider">
                         <div class="output"></div>
                     </div>
                     <div class="slideContainer">
-                        <label>Sleep Aquired<span><img src="images/icons/question.png"></span></label>
+                        <label>Sleep Aquired</label>
                         <input type="range" min="0" max="5" value="0" class="slider">
                         <div class="output"></div>
                     </div>
                     <div class="slideContainer">
-                        <label>Personal Factors<span><img src="images/icons/question.png"></span></label>
+                        <label>Personal Factors</label>
                         <input type="range" min="0" max="5" value="0" class="slider">
                         <div class="output"></div>
                     </div>
@@ -53,22 +49,22 @@
                 <fieldset>
                     <h2>Operation Factors</h2>
                     <div class="slideContainer">
-                        <label>Procedure Complexity<span><img src="images/icons/question.png"></span></label>
+                        <label>Procedure Complexity</label>
                         <input type="range" min="0" max="5" value="0" class="slider">
                         <div class="output"></div>
                     </div>
                     <div class="slideContainer">
-                        <label>Procedure Length<span><img src="images/icons/question.png"></span></label>
+                        <label>Procedure Length</label>
                         <input type="range" min="0" max="5" value="0" class="slider">
                         <div class="output"></div>
                     </div>
                     <div class="slideContainer">
-                        <label>Back-to-Back Operations<span><img src="images/icons/question.png"></span></label>
+                        <label>Back-to-Back Operations</label>
                         <input type="range" min="0" max="5" value="0" class="slider">
                         <div class="output"></div>
                     </div>
                     <div class="slideContainer">
-                        <label>Patient Health Factors<span><img src="images/icons/question.png"></span></label>
+                        <label>Patient Health Factors</label>
                         <input type="range" min="0" max="5" value="0" class="slider">
                         <div class="output"></div>
                     </div>
@@ -81,26 +77,24 @@
 
     </main>
     <footer>
-        <div class="navbar">
-            <a href="index.html" class="active">
-                <img src="images/brain-me-logo-300.png">
-                <p>Home</p>
-            </a>
-            <a href="surgery-schedule.html">
-                <img src="images/icons/schedule.png">
-                <p>Schedule</p>
-            </a>
-            <a href="preSurgery.html">
-                <img src="images/icons/folder.png">
-                <p>Risk</p>
-            </a>
-            <a href="postSurgery.html">
-                <img src="images/icons/analyze.png">
-                <p>Analysis</p>
-            </a>
-        </div>
+            <div class="navbar">
+                    <a href="index.html" class="active">
+                        <img src="images/brain-me-logo-300.png">
+                        <p>Home</p>
+                    </a>
+                    <a href="surgery-schedule.html">
+                        <img src="images/icons/schedule.png">
+                        <p>Schedule</p>
+                    </a>
+                    <a href="preSurgery.html">
+                        <img src="images/icons/folder.png">
+                        <p>Risk</p>
+                    </a>
+                    <a href="postSurgery.html">
+                        <img src="images/icons/analyze.png">
+                        <p>Analysis</p>
+                    </a>
+                </div>
         <script type="text/javascript" src="scripts/slider.js"></script>
     </footer>
-</body>
-
-</html>
+</body></html>
