--- a/brain-me/surgery-schedule.html
+++ b/brain-me/surgery-schedule.html
@@ -15,8 +15,8 @@
 <body>
     <h2>Your Surgery Schedule</h2>
     <div class="content">
-        <div class="inline">
-            <img src="images/icons/plus.png" class="start" onclick="rotateImage();" id="myImage"  alt="plus">
+        <div class="inline rotateSection" onclick="rotateImage();">
+            <img src="images/icons/plus.png" class="start" id="myImage"  alt="plus">
             <h3>ADD SURGERY</h3>
         </div>
         <form id="surgeryForm" class="hide">
@@ -94,6 +94,7 @@
         </div>
         <script type="text/javascript" src="scripts/add-surgeries.js"></script>
         <script type="text/javascript" src="scripts/animateForm.js"></script>
+        <script type="text/javascript" src="scripts/delete-button.js"></script>
     </footer>
 </body>
 
