--- a/brain-me/surgery-schedule.html
+++ b/brain-me/surgery-schedule.html
@@ -92,9 +92,10 @@
                 <p>Analysis</p>
             </a>
         </div>
-        <script type="text/javascript" src="scripts/add-surgeries.js"></script>
+        <!--<script type="text/javascript" src="scripts/delete-button.js"></script>
+        <script type="text/javascript" src="scripts/add-surgeries.js"></script>-->
+        <script type="text/javascript" src="scripts/add-delete-surgeries.js"></script>
         <script type="text/javascript" src="scripts/animateForm.js"></script>
-        <script type="text/javascript" src="scripts/delete-button.js"></script>
     </footer>
 </body>
 
