--- a/brain-me/index.html
+++ b/brain-me/index.html
@@ -15,7 +15,7 @@
 <body>
     <nav>
         <div class="inline">
-            <img src="images/brain-me-logo-300.png" id="logo" alt="logo">
+            <img src="images/brain-me-logo-300.png" id="indexLogo" alt="logo">
             <h1>BRAIN ME</h1>
         </div>
         <div id="indexPage">
