--- a/brain-me/frontPage.html
+++ b/brain-me/frontPage.html
@@ -15,13 +15,21 @@
 <body id="appStart">
     <main>
         <div class="inline">
-            <img src="images/brain-me-logo-300.png" id="logo" alt="logo">
+            <audio autoplay loop>
+                <source src="extras/human-heartbeat-daniel_simon.mp3" type="audio/mp3">
+            </audio>
+            <img id="animatedLogo" src="images/brain-animation/0.png">
+            </img>
         </div>
         <div>
-            <a href="login.html">Login</a>
-            <a href="signup.html">Sign Up</a>
+            <a href="index.html">Welcome! Let's Get Started</a>
+            <!--<a href="login.html">Login</a>
+            <a href="signup.html">Sign Up</a>-->
         </div>
     </main>
     <footer>
+        <script type="text/javascript" src="scripts/brain-animation.js"></script>
     </footer>
-</body></html>
+</body>
+
+</html>
