--- a/brain-me/surgery-schedule.html
+++ b/brain-me/surgery-schedule.html
@@ -13,10 +13,16 @@
 </head>
 
 <body>
+    <nav>
+        <div class="inline">
+            <img src="images/brain-me-logo-300.png" id="logo" alt="logo">
+            <h1>BRAIN ME</h1>
+        </div>
+    </nav>
     <h2>Your Surgery Schedule</h2>
     <div class="content">
         <div class="inline rotateSection" onclick="rotateImage();">
-            <img src="images/icons/plus.png" class="start" id="myImage"  alt="plus">
+            <img src="images/icons/plus.png" class="start" id="myImage" alt="plus">
             <h3>ADD SURGERY</h3>
         </div>
         <form id="surgeryForm" class="hide">
