--- a/brain-me/frontPage.html
+++ b/brain-me/frontPage.html
@@ -15,12 +15,12 @@
 <body id="appStart">
     <main>
         <div class="inline">
-            <audio autoplay loop>
-                <source src="extras/human-heartbeat-daniel_simon.mp3" type="audio/mp3">
-            </audio>
             <img id="animatedLogo" src="images/brain-animation/0.png">
             </img>
         </div>
+        <audio autoplay loop contols>
+            <source src="extras/human-heartbeat-daniel_simon.mp3" type="audio/mp3">
+        </audio>
         <div>
             <a href="index.html">Welcome! Let's Get Started</a>
             <!--<a href="login.html">Login</a>
