--- a/brain-me/frontPage.html
+++ b/brain-me/frontPage.html
@@ -17,10 +17,12 @@
         <div class="inline">
             <img id="animatedLogo" src="images/brain-animation/0.png">
             </img>
+
         </div>
-        <audio autoplay loop contols>
+        <audio autoplay loop controls>
             <source src="extras/human-heartbeat-daniel_simon.mp3" type="audio/mp3">
         </audio>
+
         <div>
             <a href="index.html">Welcome! Let's Get Started</a>
             <!--<a href="login.html">Login</a>
